--- a/pre-registration/pom.xml
+++ b/pre-registration/pom.xml
@@ -42,13 +42,13 @@
 		<springdoc.openapi.maven.plugin>0.2</springdoc.openapi.maven.plugin>
 
 		<!-- Swagger -->
-		<springdoc.openapi.starter.webmvc.ui.version>2.5.0</springdoc.openapi.starter.webmvc.ui.version>
+		<springdoc.openapi.starter.webmvc.ui.version>2.6.0</springdoc.openapi.starter.webmvc.ui.version>
 
 		<!-- Core -->
 		<spring.version>5.0.4.RELEASE</spring.version>
-		<spring.boot.version>3.2.3</spring.boot.version>
+		<spring.boot.version>3.2.5</spring.boot.version>
 		<spring.data.version>2.0.9.RELEASE</spring.data.version>
-		<spring-cloud-config.version>2.0.0.RELEASE</spring-cloud-config.version>
+		<spring-cloud-config.version>3.1.9</spring-cloud-config.version>
 
 		<!-- Miscellaneous -->
 		<javax.validation-api.version>2.0.1.Final</javax.validation-api.version>
